--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "お祭りチェックインWebサービス",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "cp -r public/* ."
   },
   "dependencies": {
     "express": "^4.18.2",
